chore(data-insights): replace .get(0) with .getFirst() across insights package
Four occurrences replaced — all on java.util.List, valid since Java 21
via SequencedCollection:

- DataInsightsApp: result.failures().getFirst()
- DataInsightsReportApp: result.getTargetResult().getFirst()
- WebAnalyticsEntityViewProcessor: oEntityOwners.get().getFirst()
- WebAnalyticsUserActivityProcessor: userDetails.getTeams().getFirst()

Also includes spotless formatting applied to all files touched since the
previous spotless run.